--- a/docker/docker-compose.test.yml
+++ b/docker/docker-compose.test.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: ..
       dockerfile: docker/Dockerfile.test
-    image: ${IMAGE:-pipdevs/test}
+    image: ${IMAGE:-pipservices/test}
     environment:
       PUSHGATEWAY_SERVICE_HOST: pushgateway
       PUSHGATEWAY_SERVICE_PORT: 9091
